[package]
name = "mini"
version = "0.1.0"
authors = ["Ed Felten <ed@felten.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.18.1"
regex = "1"
num-bigint = "0.2.6"
num-traits = "0.2.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.6"
serde_json = "1.0"
clap = "2"
bincode = "1.2.1"
crypto-hash = "0.3.4"
hex = "0.4.2"
ethabi = "12.0.0"
keccak-hash = "0.5.1"
bytes = "0.5.5"
im = "15.0.0"