[package]
name = "mini"
version = "0.1.0"
authors = ["Ed Felten <ed@felten.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.18.1"
regex = "1"
rand = { version = "0.8.4", features = ["small_rng"] }
num-bigint = { version = "0.4.2", features = ["rand"] }
num-traits = "0.2.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.6"
serde_json = { version = "1.0", features = ["unbounded_depth"] }
serde_stacker = "0.1.4"
derivative = "2.2.0"
clap = "3.0.0-beta.2"
bincode = "1.2.1"
crypto-hash = "0.3.4"
hex = "0.4.2"
ethabi = "12.0.0"
keccak-hash = "0.5.1"
ethereum-types = "0.9.2"
bytes = "0.5.5"
im = "15.0.0"
rlp = "0.4.5"
ethers-core = "0.1.3"
ethers-signers = "0.1.3"
keccak="0.1.0"
parity-bn = "0.4.4"
rust-crypto="^0.2"
num-integer = "0.1"
rustc-hex = "2.1.0"
toml = "0.5.8"
rayon = "1.5.1"
petgraph = "0.6.0"
unicode-width = "0.1.9"
parking_lot = "0.11"
lazy_static = "1.4.0"

[features]
sparse_buffers = []

[profile.release]
debug = true