[package]
name = "wasm2avm"
version = "0.1.0"
authors = ["Sami Mäkelä <mrsmkl@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

parity-wasm = "0.42"
ethers-core = "0.1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.6"
num-bigint = { version = "0.3", features = ["rand"] }
num-traits = "0.2.11"
ethereum-types = "0.9.2"
rlp = "0.4.5"
hex = "0.4.2"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
